# phoenix-engine

./: CMakeLists.txt  README.md
.cache/clangd/index/: glad.cc.0A28C6E2E7781AEC.idx  glad.h.57F17E62A61F88BE.idx  input.cc.26B389E50AEF000F.idx  input.h.91C7DC6B2E7B2964.idx  khrplatform.h.DB72873AFB0AAE17.idx  main.cc.41C96306BF902903.idx  main.h.6D9333E8815B3BAA.idx  stb_image.h.0B01DD66023555B0.idx  window.cc.6192CE708DDA69A0.idx  window.h.22CAD9E46F63E637.idx
assets/shaders/: shader-depth.fs  shader-depth.vs  shader.fs  shader.vs  shader3d-black.fs  shader3d.fs  shader3d.vs
include/: camera.h  entity.h  input.h  main.h  scene.h  stats.h  vertices.h  window.h
include/glad/: glad.h
src/: camera.cc  entity.cc  glad.cc  input.cc  main.cc  model.cc  scene.cc  stats.cc  texture.cc  vertices.cc  window.cc
